--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: safi_app_production
   username: safi_app
   password: <%= ENV["SAFI_APP_DATABASE_PASSWORD"] %>
