--- a/config/database.yml
+++ b/config/database.yml
@@ -23,16 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: safiapp_development
-  timezone: Africa/Nairobi
-  username: safi_sales_rep
-  password: 1234
+  database: safi_app_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: safiapp
+  # username: safi_app
 
   # The password associated with the postgres role (username).
   #password:
@@ -60,9 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: safiapp_test
-  username: safi_sales_rep
-  password: 1234
+  database: safi_app_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -77,9 +72,9 @@ test:
 # variable, Rails will automatically merge its configuration values on top of
 # the values provided in this file. Alternatively, you can specify a connection
 # URL environment variable explicitly:
-#
-  production:
-    url: <%= ENV["MY_APP_DATABASE_URL"] %>
+# #
+#   production:
+#     url: <%= ENV["MY_APP_DATABASE_URL"] %>
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
@@ -87,6 +82,6 @@ test:
 production:
   <<: *default
   url: <%= ENV["DATABASE_URL"] %>
-  database: safiapp_production
-  username: safi_sales_rep
-  password: 1234
+  database: safi_app_production
+  username: safi_app
+  password: <%= ENV["SAFI_APP_DATABASE_PASSWORD"] %>
