--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,16 @@ default: &default
 
 development:
   <<: *default
-  database: safi_app_development
+  database: safiapp_development
+  timezone: Africa/Nairobi
+  username: safi_sales_rep
+  password: 1234
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  # username: safi_app
+  #username: safiapp
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +60,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: safi_app_test
+  database: safiapp_test
+  username: safi_sales_rep
+  password: 1234
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -72,9 +77,9 @@ test:
 # variable, Rails will automatically merge its configuration values on top of
 # the values provided in this file. Alternatively, you can specify a connection
 # URL environment variable explicitly:
-# #
-#   production:
-#     url: <%= ENV["MY_APP_DATABASE_URL"] %>
+#
+  production:
+    url: <%= ENV["MY_APP_DATABASE_URL"] %>
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
@@ -82,6 +87,6 @@ test:
 production:
   <<: *default
   url: <%= ENV["DATABASE_URL"] %>
-  database: safi_app_production
-  username: safi_app
-  password: <%= ENV["SAFI_APP_DATABASE_PASSWORD"] %>
+  database: safiapp_production
+  username: safi_sales_rep
+  password: 1234
