--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ databases:
 services:
   - type: web
     name: safi-app
+    plan: free
     env: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: bundle exec rails s
